# Conway-GameOfLife

./: .gitignore  CMakeLists.txt  Makefile  README.md  license.md
cmake/: ClangFormat.cmake
docs/: Doxyfile
docs/html/: Array1D_8hpp.html  Array1D_8hpp_source.html  Board_8hpp.html  Board_8hpp_source.html  Functions_8cpp.html  Functions_8hpp.html  Functions_8hpp_source.html  GameParams_8hpp.html  GameParams_8hpp_source.html  Grid_8hpp.html  Grid_8hpp_source.html  annotated.html  classArray1D-members.html  classArray1D.html  classBoard-members.html  classBoard.html  classGameParams-members.html  classGameParams.html  classGrid-members.html  classGrid.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  main__parallel_8cpp.html  main__simple_8cpp.html  menudata.js
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  defines_0.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  variables_7.js  (+2 more)
examples/: params.txt  slurm_icelake_example
examples/Gosper_glider_gun/: init.txt  params.txt
examples/crit_5/: params.txt
examples/large/: ini.txt  params.txt
examples/simple_board/: params.txt  step0.txt  step1.txt  test.txt
examples/spaceship/: init.txt  params.txt
post_process/: visualize.py
report/: report.aux  report.fdb_latexmk  report.fls  report.tex
src/: CMakeLists.txt  main.cpp  main_parallel.cpp  main_simple.cpp  main_test.cpp
src/lib/: Array1D.hpp  Board.hpp  CMakeLists.txt  Functions.cpp  Functions.hpp  GameParams.hpp  Grid.hpp
test/: CMakeLists.txt  test_board.cpp  test_functions.cpp
